refactor ums ui code